...
    <string name="cpr_rate_button_start">START</string>
    <string name="cpr_rate_button_stop">STOP</string>
    <string name="save_changes">Save changes</string>
    <string name="changes_saved">Changes saved</string>
    <string name="invalid_field_msg">ERROR : Some fields are not filled correctly</string>
    <string name="invalid_empty_msg">ERROR : Some mandatory fields (*) are left empty</string>
    <string name="username_error_field_msg">ERROR : Please choose a correct username</string>
    <string name="privacy_policy_not_accepted">ERROR : You must accept our privacy policy first</string>

    <!--Preference Key for now should find better way to store this-->

    <string name="my_skills_key">MY_SKILLS_KEY</string>
    <string name="medical_info_key">MEDICAL_INFO_KEY</string>

    <string name="privacy_policy">Privacy policy</string>
    <string name="medical_info_privacy_policy">
        We know how your medical information are important to you and we take care of your privacy. Indeed your medical data is only stored on your phone.\n In case of an emergency only your helper will receive the necessary information so he/she can help you in the best condition. After the intervention, your info will then be deleted from your helper\'s phone and you will again be the only owner

    <string name="pro_profile_privacy_policy">
        We know how your professional information are important to you and we take care of your privacy. Indeed your professional data is only stored on the H3lp database.\n In case of an emergency or if you respond to a post in the forum, your data will be displayed to the other users.</string>

    <string name="condition_help_msg">This Field is dedicated to any illness or diseases that a caregiver should know in case of emergency</string>
    <string name="treatment_help_msg">This Field is dedicated to any medication your are taking that a caregiver should know in case of emergency</string>
    <string name="allergy_help_msg">This Field is dedicated to any allergy you suffer from that a caregiver should know in case of emergency</string>
    <string name="help">H3LP!</string>
...
    <string name="hospitals_guide_prompt">Locate the hospitals in your area</string>
    <string name="defibrillators_guide_prompt">Find nearby defibrillators</string>
    <string name="pharmacies_guide_prompt">Locate the nearest pharmacies</string>
    <string name="first_aid_guide_prompt">Basic first aid training tips and procedures for any emergency !</string>
    <string name="guide_search_bar_prompt">In case of emergency, you can quickly find what you\'re looking for thanks to our available search bar! </string>
    <string name="KEY_USER_AGREE">USER_AGREE</string>
    <string name="KEY_USER_SIGNED_IN">USER_SIGNED_IN</string>
    <string name="KEY_USER_UID">USER_UID</string>
    <string name="KEY_USER_NAME">USER_NAME</string>

    <string name="my_helper_skills">My Helper Skills</string>
    <string name="help_my_skills">This tab represents your skills as an helper. \n\n
        Here you can choose what you are able to help for, for example medicine that you carry with you or any health skill that you have.\n\n
...
